# batchflow

./: .gitignore  EfficientNet_test.ipynb  LICENSE  MANIFEST.in  README.md  Scalable_model_test.ipynb  __init__.py  check_release_version.py  genindex.html  index.html  objects.inv  poetry.toml  py-modindex.html  pylintrc  pyproject.toml  requirements.txt  ruff.toml  search.html  searchindex.js  setup.py  shippable.yml
.github/: CODEOWNERS
.github/workflows/: doc.yml  pr.yml  release-check.yml  release-on-branch-create.yml  release-on-merge.yml  release.yml  status.yml  test-install.yml
_modules/: index.html
_modules/batchflow/: batch.html  batch_image.html  dataset.html  decorators.html  dsindex.html  exceptions.html  named_expr.html  once_pipeline.html  pipeline.html  sampler.html  utils.html
_sources/: index.rst.txt
_sources/api/: batchflow.core.rst.txt  batchflow.dataset.rst.txt  batchflow.decorators.rst.txt  batchflow.models.rst.txt  batchflow.utils.rst.txt
_sources/intro/: batch.rst.txt  classes.rst.txt  dataset.rst.txt  images_batch.rst.txt  model_zoo.rst.txt  models.rst.txt  torch_models.rst.txt
api/: batchflow.batch.html  batchflow.batch_image.html  batchflow.core.html  batchflow.dataset.html  batchflow.decorators.html  batchflow.exceptions.html  batchflow.html  batchflow.index.html  batchflow.models.html  batchflow.models.metrics.html  batchflow.models.torch.base.html  batchflow.models.torch.html  batchflow.models.torch.layers.html  batchflow.models.torch.models.html  batchflow.models.torch.resnet.html  batchflow.models.torch.unet.html  batchflow.models.torch.vgg.html  batchflow.named_expressions.html  batchflow.once_pipeline.html  batchflow.opensets.html  batchflow.pipeline.html  batchflow.research.html  batchflow.sampler.html  batchflow.utils.html
batchflow/: __init__.py  _const.py  _fake.py  base.py  batch.py  batch_image.py  best_practice.py  components.py  config.py  dataset.py  decorators.py  dsindex.py  exceptions.py  model_dir.py  monitor.py  named_expr.py  notifier.py  notyfier.py  ns_pipeline.py  once_pipeline.py  pipeline.py  pipeline_executor.py  plot.py  profiler.py  run_notebook.py  sampler.py  utils.py  utils_import.py  utils_notebook.py  utils_random.py  utils_telegram.py  utils_transforms.py  variables.py
batchflow/eager_models/: __init__.py  torch.py  utils.py
batchflow/models/: base.py  parser.py  sklearn.py  utils.py
batchflow/opensets/: __init__.py  ade.py  base.py  cifar.py  coco.py  imagenette.py  mnist.py  pascal.py  small_imagenet.py
batchflow/plot/: __init__.py  docs.py  plot.py  utils.py
batchflow/plotter/: __init__.py  cmaps.py  morphology.py  plot.py  utils.py
batchflow/research/: __init__.py  distributor.py  domain.py  executable.py  experiment.py  grid.py  job.py  logger.py  named_expr.py  new_research.py  profiler.py  research.py  results.py  storage.py  utils.py  workers.py
batchflow/tests/: accuracy_test.py  apply_parallel_test.py  apply_transform_test.py  assemble_test.py  basic_tests.py  batch_preloaded_test.py  classification_metrics_test.py  common_index_test.py  components_batch_test.py  components_test.py  config_basic_test.py  config_data_fixtures.py  config_pass_test.py  config_test.py  conftest.py  dataformat_test.py  dataset_test.py  datasetindex_test.py  deep_galerkin_test.py  eager_models_compile_test.py  encoder_decoder_test.py  filesindex_test.py  metrics_test.py  model_save_load_test.py  named_expr_test.py  notebooks_test.py  opensets_test.py  pipeline_init_model_test.py  plot_notebooks_test.py  rebatch_test.py  regression_metrics_test.py  research_test.py  save_to_test.py  segmentation_metrics_by_pixels_test.py  segmentation_metrics_test.py  segmentation_metrics_test_brief.py  temporal.py  test_loss_test.py  tf_models_compile_test.py  torch_layers_test.py  (+7 more)
benchmark/: benchmark.py
dataset/: __init__.py  base.py  batch.py  batch_base.py  batch_image.py  best_practice.py  components.py  config.py  dataset.py  decorators.py  dsindex.py  exceptions.py  jointdataset.py  model_dir.py  named_expr.py  pipeline.py  preprocess.py  sampler.py  utils.py  variables.py
dataset/image/: batch_image.py
dataset/models/: __init__.py  base.py  sklearn.py  tf_model.py  utils.py
dataset/opensets/: __init__.py  base.py  cifar.py  mnist.py
dataset/research/: __init__.py  distributor.py  grid.py  job.py  research.py  results.py  singlerun.py  task.py  workers.py
doc/: README.md  batch.md  dataset.md  index.md  intro.md  models.md  parallel.md  pipeline.md  prefetch.md  tf_queue.md
docs/: Makefile  conf.py  index.rst
docs/_static/: custom.css
docs/api/: batchflow.batch_image.rst  batchflow.core.rst  batchflow.decorators.rst  batchflow.models.tf.activations.rst  batchflow.models.tf.base.rst  batchflow.models.tf.deeplab.rst  batchflow.models.tf.densenet.rst  batchflow.models.tf.models.rst  batchflow.models.tf.rst  batchflow.models.tf.train.rst  batchflow.models.tf.xception.rst  batchflow.models.torch.models.rst  batchflow.models.torch.rst  batchflow.once_pipeline.rst  batchflow.opensets.rst  batchflow.research.rst  batchflow.rst  batchflow.sampler.rst  dataset.batch.rst  dataset.batch_image.rst  dataset.core.rst  dataset.decorators.rst  dataset.exceptions.rst  dataset.image.rst  dataset.models.metrics.rst  dataset.models.rst  dataset.models.tf.densenet_fc.rst  dataset.models.tf.encoder_decoder.rst  dataset.models.tf.faster_rcnn.rst  dataset.models.tf.gcn.rst  dataset.models.tf.inception.rst  (+17 more)
examples/: 00_content.ipynb  03_ready_to_use_model_torch.ipynb  04_image_augmentation.ipynb  05_sampler.ipynb  06_profiling.ipynb  07_tracking.ipynb  basic.py  batch_complex.py  cifar_basic.py  dask_df.py  dg_model_pde.ipynb  image.py  index_files.py  joint_ds.py  mnist_basic.py  mnist_model.py  models.py  parallel.py  prefetch-many.py  prefetch.py  processing.py  tf_queue.py
intro/: batch.html  classes.html  dataset.html  dsindex.html  images_batch.html  intro.html  model_zoo.html  model_zoo_torch.html  models.html  named_expr.html  parallel.html  pipeline.html  prefetch.html  research.html  torch_models.html
(+414 files in other folders)
