[tool.poetry]
name = "batchflow"
version = "0.8.0"
description = "ML pipelines, model configuration and batch management"
authors = ["Roman Kh <rhudor@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
documentation = "https://analysiscenter.github.io/batchflow/"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Topic :: Scientific/Engineering'
]

packages = [
    { include = "batchflow" },
]

[tool.poetry.dependencies]
python = "^3.8"

numpy = ">=1.10"
dill = ">=0.2.7"
multiprocess = ">=0.70.11"
tqdm = ">=4.19.7"
scipy = ">=0.19.1"


[tool.poetry.group.nn.dependencies]
torch = { version = ">=1.7", optional = true }
torchvision = { version = "^0.10", optional = true }
einops = { version = ">=0.3", optional = true }

[tool.poetry.group.dev.dependencies]
pandas = { version = "^0.24", optional = true }
pytest = { version = "^6.0", optional = true }
pylint = { version = "^2.8", optional = true }

[tool.poetry.group.other.dependencies]
matplotlib = { version = "^3.0", optional = true }
urllib3 = { version = "^1.25", optional = true }

[tool.poetry.extras]
nn = ["torch", "einops"]
dev = ["pandas", "pytest", "pylint", "matplotlib"]
telegram = ["urllib3"]
visual = ["matplotlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
