[tool.poetry]
name = "batchflow"
version = "0.8.8"
description = "ML pipelines, model configuration and batch management"
authors = ["Roman Kh <rhudor@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
documentation = "https://analysiscenter.github.io/batchflow/"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Topic :: Scientific/Engineering'
]

packages = [
    { include = "batchflow" },
]

[tool.poetry.dependencies]
python = "^3.8"

dill = "^0.3"
numpy = "^1.18"
numba = ">=0.56"
llvmlite = "*"
scipy = "^1.9"

tqdm = "^4.19"


# [tool.poetry.group.image.dependencies]
pillow = { version = ">=9.4,<11.0", optional = true }
matplotlib = { version = "^3.7", optional = true }

# [tool.poetry.group.research.dependencies]
multiprocess = { version = "^0.70", optional = true }
py-nbtools = { version = "*", optional = true }

# [tool.poetry.group.monitor.dependencies]
psutil = { version = "*", optional = true }
nvidia_smi = { version = "*", optional = true }

# [tool.poetry.group.nn.dependencies]
torch = { version = ">=1.13", optional = true }
torchvision = { version = ">=0.14", optional = true }
einops = { version = "^0.3", optional = true }
ptflops = { version = "^0.6", optional = true }
scikit-learn = { version = ">=0.21.3", optional = true }

# [tool.poetry.group.dev.dependencies]
pandas = { version = "^0.24", optional = true }
pytest = { version = "^7.0", optional = true }
pylint = { version = "^2.16", optional = true }

# [tool.poetry.group.jupyter.dependencies]
nbformat = { version = "*", optional = true }
nbconvert = { version = "*", optional = true }
ipykernel = { version = "*", optional = true }
ipython = { version = "*", optional = true }
notebook = { version = "*", optional = true }
jupyter_client = { version = "*", optional = true }
jupyter_server = { version = "*", optional = true }
requests = { version = "*", optional = true }

# [tool.poetry.group.other.dependencies]
urllib3 = { version = "^1.25", optional = true }

[tool.poetry.extras]
image = ["pillow", "matplotlib"]
nn = ["torch", "torchvision", "einops", "ptflops", "nvidia_smi", "psutil"]
datasets = ["requests"]
profile = ["pandas", "psutil", "nvidia_smi", "matplotlib"]
jupyter = ["requests", "ipykernel", "ipython", "notebook", "nbconvert", "nbformat", "jupyter_client", "jupyter_server", "matplotlib"]
dev = ["pandas", "pytest", "pylint"]
research = ["pandas", "multiprocess", "psutil", "matplotlib"]
telegram = ["urllib3"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
