[project]
name = "batchflow"
version = "0.9.4"
description = "ML pipelines, model configuration and batch management"
authors = [{ name = "Roman Kh", email = "rhudor@gmail.com" }]
license = {text = "Apache License 2.0"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering"
]

requires-python = ">=3.10"

dependencies = [
    "dill>=0.3",
    "numpy>=1.26",
    "numba>=0.56",
    "llvmlite",
    "scipy>=1.9",
    "tqdm>=4.19",
]

[project.optional-dependencies]

image = [
    "pillow>=9.4,<11.0",
    "matplotlib>=3.7"
]

research = [
    "multiprocess>=0.70",
    "py-nbtools>=0.9.15"
]

monitor = [
    "psutil",
    "nvidia-ml-py"
]

nn = [
    "torch>=1.13",
    "torchvision>=0.14",
    "einops>=0.3",
    "ptflops>=0.6",
    "scikit-learn>=0.21.3"
]

dev = [
    "pandas>=0.24",
    "pytest>=8.3.4",
    "ruff"
]

jupyter = [
    "nbformat",
    "nbconvert",
    "ipykernel",
    "ipython",
    "notebook",
    "jupyter_client",
    "jupyter_server",
    "requests"
]

telegram = [
    "pillow>=9.4,<11.0",
]

safetensors = [
    "safetensors>=0.5.3",
]

onnx = [
    "onnx>=1.14.0",
    "onnx2torch>=1.5.0",
]

openvino = [
    "openvino>=2025.0.0",
]

other = [
    "urllib3>=1.25"
]

#--------------------------------
#            BUILD
#--------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["batchflow"]


#--------------------------------
#            TEST
#--------------------------------
[tool.pytest.ini_options]
pythonpath = ["."]
